rename page.css 3

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16670,7 +16670,7 @@ fieldset[disabled] .btn {
   padding: 16px 24px!important
 }
 @supports (margin-bottom:env(safe-area-inset-bottom)) {
-  ._1tt196k {
+  .footer-menu__wrapper {
     margin-bottom: env(safe-area-inset-bottom)!important;
     padding-left: env(safe-area-inset-left)!important;
     padding-right: env(safe-area-inset-right)!important
