--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -7896,7 +7896,7 @@ select[disabled] {
 .dir.atm_li_ke7zzc {
   padding-inline-end: var(--explore_padding-inline);
 }
-._1tt196k {
+.footer-menu__wrapper {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   display: -webkit-box;
@@ -7926,12 +7926,12 @@ select[disabled] {
   z-index: 1 !important;
 }
 @media print {
-  ._1tt196k {
+  .footer-menu__wrapper {
     display: none !important;
   }
 }
 @supports (margin-bottom: constant(safe-area-inset-bottom)) {
-  ._1tt196k {
+  .footer-menu__wrapper {
     margin-bottom: constant(safe-area-inset-bottom) !important;
     padding-left: constant(safe-area-inset-left) !important;
     padding-right: constant(safe-area-inset-right) !important;
@@ -10041,7 +10041,7 @@ h3:first-child {
     transition: none !important;
   }
 }
-._1bpiufr {
+.resolution-body__container {
   -webkit-box-lines: multiple !important;
   -webkit-box-pack: start !important;
   -ms-flex-pack: start !important;
@@ -10073,7 +10073,7 @@ h3:first-child {
   padding-right: calc(24px - 6px) !important;
 }
 @media (min-width: 375px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: -webkit-calc(24px - 6px) !important;
     padding-left: -moz-calc(24px - 6px) !important;
     padding-left: calc(24px - 6px) !important;
@@ -10086,7 +10086,7 @@ h3:first-child {
   }
 }
 @media (min-width: 744px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: -webkit-calc(40px - 8px) !important;
     padding-left: -moz-calc(40px - 8px) !important;
     padding-left: calc(40px - 8px) !important;
@@ -10099,7 +10099,7 @@ h3:first-child {
   }
 }
 @media (min-width: 950px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: -webkit-calc(40px - 8px) !important;
     padding-left: -moz-calc(40px - 8px) !important;
     padding-left: calc(40px - 8px) !important;
@@ -10112,7 +10112,7 @@ h3:first-child {
   }
 }
 @media (min-width: 1128px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: -webkit-calc(80px - 8px) !important;
     padding-left: -moz-calc(80px - 8px) !important;
     padding-left: calc(80px - 8px) !important;
@@ -10125,7 +10125,7 @@ h3:first-child {
   }
 }
 @media (min-width: 1440px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: -webkit-calc(80px - 8px) !important;
     padding-left: -moz-calc(80px - 8px) !important;
     padding-left: calc(80px - 8px) !important;
@@ -10139,7 +10139,7 @@ h3:first-child {
   }
 }
 @media print {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: 0 !important;
     padding-right: 0 !important;
     margin-left: 0 !important;
@@ -17109,7 +17109,7 @@ h3:first-child {
   border: none !important;
   box-shadow: rgb(34 34 34) 0 0 0 2px inset !important;
 }
-._vysn8h0 {
+.payment-option-dropdown-pay-with {
   display: flex !important;
   margin-bottom: 24px !important;
 }
@@ -27661,7 +27661,7 @@ tr.hide {
     padding-bottom: 24px !important;
   }
 }
-._1hsn6c7 {
+.h-overflow-x {
   overflow-x: hidden !important;
 }
 .feature__airbnb-ul {
@@ -27841,7 +27841,7 @@ tr.hide {
     animation-duration: 0s;
   }
 }
-.sxjq0r[class][class] {
+.navbar-header__spacer[class][class] {
   pointer-events: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -27849,7 +27849,7 @@ tr.hide {
   user-select: none;
   white-space: pre-wrap;
 }
-.dir.sxjq0r[class][class] {
+.dir.navbar-header__spacer[class][class] {
   padding-left: 0;
   padding-right: 0;
 }
@@ -27911,7 +27911,7 @@ tr.hide {
   -ms-transform: scale(0.92);
   transform: scale(0.92);
 }
-._1tt196k {
+.footer-menu__wrapper {
   -webkit-box-align: center !important;
   display: flex;
   align-items: center !important;
@@ -27983,7 +27983,7 @@ tr.hide {
 ._1ou8uzt {
   margin-bottom: 32px !important;
 }
-._1h4ezu9 {
+.site-content__content-menu-wrapper {
   position: relative !important;
   cursor: text !important;
   display: flex !important;
@@ -28044,11 +28044,11 @@ tr.hide {
 ._joa4pj8 {
   color: #222 !important;
 }
-._fu49hrz {
+.payment-option__described-btn-wrap {
   position: relative !important;
   z-index: 3 !important;
 }
-._wz0818y {
+.payment-option__described-btn {
   display: block !important;
   width: 100% !important;
   background: #fff !important;
@@ -28060,21 +28060,21 @@ tr.hide {
   border: 1px solid #b0b0b0 !important;
   border-radius: 8px !important;
 }
-._qcdbez {
+.payment-option__selection-wrapper {
   pointer-events: none !important;
   position: absolute !important;
   top: 0 !important;
   right: 20px !important;
   height: 100% !important;
 }
-._wn4bip {
+.payment-option__selection-wrapper-icon {
   display: table-cell !important;
   vertical-align: middle !important;
   transition-property: -ms-transform, -webkit-transform, transform !important;
   transition-duration: 250ms !important;
   transition-timing-function: ease-in-out !important;
 }
-._18z8fput {
+.footer__progress-active-icon {
   float: left !important;
   margin-top: -9px !important;
   height: 24px !important;
@@ -28096,10 +28096,10 @@ tr.hide {
   width: 100% !important;
   overflow-wrap: break-word !important;
 }
-._1xkps6z {
+.header__logo-wrapper {
   margin-bottom: 24px !important;
 }
-._uh6ul55 {
+.header__logo-content {
   color: #222 !important;
   font-weight: 600 !important;
   margin-right: 24px !important;
@@ -28107,11 +28107,11 @@ tr.hide {
   line-height: 26px !important;
   margin-bottom: 4px !important;
 }
-._huz4f0 {
+.header__logo-img {
   margin-right: 6px !important;
   -webkit-tap-highlight-color: transparent !important;
 }
-._1nc6ity {
+.header__logo-img-container {
   -webkit-box-align: center !important;
   -webkit-box-pack: end !important;
   flex: 1 1 0% !important;
@@ -28120,7 +28120,7 @@ tr.hide {
   align-items: center !important;
 }
 @supports (--custom: properties) {
-  ._1flv4264 {
+  .resolution__sibmit-btn {
     border-radius: var(--border-button-border-radius, 4px) !important;
     font-size: var(--font-button-font-size, 16px) !important;
     line-height: var(--font-button-line-height, 24px) !important;
@@ -28147,7 +28147,7 @@ tr.hide {
     color: var(--color-buttons-mono-text, #484848) !important;
   }
 }
-._1flv4264 {
+.resolution__sibmit-btn {
   display: inline-block !important;
   margin: 0 !important;
   position: relative !important;
@@ -28174,7 +28174,7 @@ tr.hide {
   border-color: #484848 !important;
   color: #484848 !important;
 }
-._t4e07m {
+.header__wrapper {
   -webkit-box-align: center !important;
   height: 64px !important;
   display: flex !important;
@@ -28182,21 +28182,21 @@ tr.hide {
   padding-left: 24px !important;
   padding-right: 24px !important;
 }
-._ngr7rq {
+.progress-bar__wrapper {
   display: flex !important;
   width: 100% !important;
   background-color: #ddd !important;
 }
-._7xkl9u {
+.progress-bar__wrapper-span {
   height: 2px !important;
   background-color: #222 !important;
 }
-._2s36nz {
+.resolution-exit {
   right: 0 !important;
   position: absolute !important;
   margin-right: 24px !important;
 }
-._x4yxgi {
+.navbar-header__spacer-icon {
   position: relative !important;
   vertical-align: middle !important;
   color: #ddd !important;
@@ -28204,7 +28204,7 @@ tr.hide {
   margin-right: 8px !important;
   display: inline-block !important;
 }
-._qwh3w5 {
+.payment-method__section {
   padding-top: 8px !important;
   padding-bottom: 24px !important;
 }
@@ -28213,18 +28213,18 @@ tr.hide {
   padding-top: 8px !important;
   padding-bottom: 24px !important;
 }
-._zmovaf {
+.payment-method__section-text {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 800 !important;
   margin-bottom: 8px !important;
 }
-._dj03bw {
+.resolution__back-btn {
   border-top: 1px solid #ddd !important;
   padding: 16px !important;
   margin-top: 24px !important;
 }
-._1wxgpj5 {
+.resolution__sibmit-btn-wrapper {
   right: 0 !important;
   position: absolute !important;
   margin-right: 8px !important;
@@ -28242,21 +28242,21 @@ tr.hide {
   line-height: 20px !important;
   font-weight: 800 !important;
 }
-.len26si[class][class]:nth-of-type(1n) {
+.place__rate-text-li[class][class]:nth-of-type(1n) {
   display: inline-block;
 }
 .dir.place__rate-text[class][class] {
   margin: 0;
   padding: 0;
 }
-.sxjq0r[class][class] {
+.navbar-header__spacer[class][class] {
   pointer-events: none;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
-.dir-ltr.sxjq0r[class][class] {
+.dir-ltr.navbar-header__spacer[class][class] {
   padding-left: 0;
   padding-right: 0;
 }
@@ -28321,7 +28321,7 @@ tr.hide {
     vertical-align: middle !important;
   }
 }
-._oqur3jl {
+.profile-reviews__input-koan-header {
   background-color: transparent !important;
   border: 0 !important;
   margin: 0 !important;
@@ -28354,7 +28354,7 @@ tr.hide {
     width: 100% !important;
   }
 }
-._84rcdk {
+.profile-reviews__logo-xl-menu {
   appearance: none !important;
   background: 0 0 !important;
   border: none !important;
@@ -28369,13 +28369,13 @@ tr.hide {
   white-space: nowrap !important;
   transition: color 0.25s !important;
 }
-._18lcoy3z {
+.profile-reviews__logo-xl-list {
   height: 100% !important;
   vertical-align: middle !important;
   box-sizing: border-box !important;
   border-bottom: 2px solid transparent !important;
 }
-._l7gvu6 {
+.profile-reviews__logo-xl-icon {
   fill: #008489 !important;
   height: 6px !important;
   opacity: 0 !important;
@@ -28386,7 +28386,7 @@ tr.hide {
   -webkit-transform-origin-y: -5px !important;
   width: 6px !important;
 }
-._4yakdxf {
+.profile-reviews__logo-xl-icon-svg {
   fill: #008489 !important;
   height: 6px !important;
   position: absolute !important;
@@ -28435,7 +28435,7 @@ tr.hide {
     height: 80px !important;
   }
 }
-._1bpiufr {
+.resolution-body__container {
   -webkit-box-pack: start !important;
   -webkit-box-align: stretch !important;
   display: flex !important;
@@ -28450,28 +28450,28 @@ tr.hide {
   padding-right: calc(18px) !important;
 }
 @media (min-width: 375px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: calc(18px) !important;
     padding-right: calc(18px) !important;
     width: calc(100% + 12px) !important;
   }
 }
 @media (min-width: 744px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: calc(32px) !important;
     padding-right: calc(32px) !important;
     width: calc(100% + 16px) !important;
   }
 }
 @media (min-width: 950px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: calc(32px) !important;
     padding-right: calc(32px) !important;
     width: calc(100% + 16px) !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1bpiufr {
+  .resolution-body__container {
     padding-left: calc(72px) !important;
     padding-right: calc(72px) !important;
     width: calc(100% + 16px) !important;
@@ -28542,18 +28542,18 @@ tr.hide {
   line-height: 20px !important;
   color: #222 !important;
 }
-._1kmyg3h {
+.amount__section {
   border-top: 1px solid #ddd !important;
   padding-top: 24px !important;
   padding-bottom: 24px !important;
 }
-._wruu3z {
+.amount__section-text-h2 {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 400 !important;
   margin-bottom: 4px !important;
 }
-._1yhtlvs {
+.amount__section-text-desc {
   font-size: 14px !important;
   line-height: 18px !important;
   font-weight: 400 !important;
@@ -28596,7 +28596,7 @@ tr.hide {
   margin-top: 40px !important;
   margin-bottom: 24px !important;
 }
-._18eo66x {
+.resolution__back-btn-icon {
   margin-left: -8px !important;
   margin-right: 8px !important;
 }
@@ -29081,7 +29081,7 @@ tr.hide {
   -webkit-align-items: center !important;
   align-items: center !important;
 }
-._84rcdk {
+.profile-reviews__logo-xl-menu {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
   appearance: none !important;
@@ -29101,29 +29101,29 @@ tr.hide {
   transition: color 0.25s !important;
 }
 @media (min-width: 744px) {
-  ._84rcdk {
+  .profile-reviews__logo-xl-menu {
     height: 80px !important;
     line-height: 80px !important;
   }
 }
-._18lcoy3z {
+.profile-reviews__logo-xl-list {
   height: 100% !important;
   vertical-align: middle !important;
   -moz-box-sizing: border-box !important;
   box-sizing: border-box !important;
   border-bottom: 2px solid transparent !important;
 }
-._18lcoy3z:hover {
+.profile-reviews__logo-xl-list:hover {
   border-bottom: 2px solid #767676 !important;
 }
-._lvb55za {
+.profile-reviews__logo-xl-text {
   display: inline-block !important;
   padding: 8px !important;
   vertical-align: middle !important;
   line-height: 1 !important;
   border-bottom: 2px solid transparent !important;
 }
-._l7gvu6 {
+.profile-reviews__logo-xl-icon {
   fill: #008489 !important;
   height: 6px !important;
   opacity: 0 !important;
@@ -35859,7 +35859,7 @@ tr.hide {
   position: sticky !important;
   top: 0 !important;
 }
-._1tt196k {
+.footer-menu__wrapper {
   -webkit-box-align: center !important;
   display: flex;
   align-items: center !important;
@@ -35878,7 +35878,7 @@ tr.hide {
   z-index: 4 !important;
 }
 @supports (margin-bottom: env(safe-area-inset-bottom)) {
-  ._1tt196k {
+  .footer-menu__wrapper {
     margin-bottom: env(safe-area-inset-bottom) !important;
     padding-left: env(safe-area-inset-left) !important;
     padding-right: env(safe-area-inset-right) !important;
@@ -39136,7 +39136,7 @@ tr.hide {
   margin-left: 8px !important;
   margin-right: 8px !important;
 }
-._1h4ezu9 {
+.site-content__content-menu-wrapper {
   position: relative !important;
   cursor: text !important;
   display: -webkit-box !important;
