--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1059,7 +1059,7 @@
   padding: 16px 24px!important
 }
 @supports (margin-bottom:env(safe-area-inset-bottom)) {
-  ._1tt196k {
+  .footer-menu__wrapper {
     margin-bottom: env(safe-area-inset-bottom)!important;
     padding-left: env(safe-area-inset-left)!important;
     padding-right: env(safe-area-inset-right)!important
