rename page.css 4

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -17041,7 +17041,7 @@ fieldset[disabled] .btn {
   padding-top: 4px!important;
   padding-bottom: 20px!important
 }
-._cjo0m2 {
+.resource-center__wrapper {
   -webkit-box-direction: normal!important;
   -webkit-box-orient: horizontal!important;
   display: flex!important;
