--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1430,7 +1430,7 @@
   padding-top: 4px!important;
   padding-bottom: 20px!important
 }
-._cjo0m2 {
+.resource-center__wrapper {
   -webkit-box-direction: normal!important;
   -webkit-box-orient: horizontal!important;
   display: flex!important;
