rename page.css 5

--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -13648,7 +13648,7 @@ h3:first-child {
   color: #222 !important;
   font-weight: 800 !important;
 }
-._7qp4lh {
+.b-divider {
   border-bottom-width: 1px !important;
   border-bottom-style: solid !important;
   border-bottom-color: #ebebeb !important;
@@ -30590,12 +30590,12 @@ tr.hide {
   border-radius: inherit !important;
 }
 @media (hover: hover) {
-  ._1h0bjrrv:hover {
+  .getting_set_up_improvement_btn:hover {
     color: #000 !important;
     border-color: #000 !important;
   }
 }
-._qrzeuh {
+.auth-container {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   padding-top: 12px !important;
@@ -30608,11 +30608,11 @@ tr.hide {
   justify-content: center !important;
 }
 @media (min-width: 744px) and (min-height: 475px) {
-  ._qrzeuh {
+  .auth-container {
     padding: 40px !important;
   }
 }
-._1y9y8er {
+.auth-container__wrapper {
   z-index: 0 !important;
   left: 0 !important;
   right: 0 !important;
@@ -30629,7 +30629,7 @@ tr.hide {
   box-sizing: border-box !important;
 }
 @media (min-width: 744px) {
-  ._1y9y8er {
+  .auth-container__wrapper {
     border: 1px solid #b0b0b0 !important;
     border-radius: 12px !important;
     position: relative !important;
@@ -30640,10 +30640,10 @@ tr.hide {
     overflow: visible !important;
   }
 }
-._7lvai1 {
+.auth-container__panel-header {
   padding: 32px !important;
 }
-._fmle54 {
+.auth-container__header {
   -webkit-box-pack: justify !important;
   -ms-flex-pack: justify !important;
   -webkit-box-align: center !important;
@@ -30672,11 +30672,11 @@ tr.hide {
   font-weight: 800 !important;
 }
 @media (min-width: 744px) {
-  ._fmle54 {
+  .auth-container__header {
     min-height: 64px !important;
   }
 }
-._2ftibv {
+.auth-container__header-spacer {
   -ms-flex-preferred-size: 16px !important;
   -ms-flex-negative: 0 !important;
   -webkit-box-flex: 0 !important;
@@ -31136,7 +31136,7 @@ tr.hide {
   display: table;
   width: 100%;
 }
-._1jn0ze9 {
+.auth-container__form-label {
   position: absolute !important;
   top: 18px !important;
   left: 12px !important;
@@ -31167,7 +31167,7 @@ tr.hide {
     -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
 }
-._js9i23 {
+.auth-container__form-field-wrapper {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -32629,7 +32629,7 @@ tr.hide {
     float: left !important;
   }
 }
-._1w9nn735 {
+.select-option__container-select {
   appearance: none !important;
   font-size: 16px !important;
   line-height: 24px !important;
@@ -39321,7 +39321,7 @@ tr.hide {
 .btn-link-condensed:disabled:hover {
   text-decoration: underline !important;
 }
-._1oj8hra {
+.form__check-input-icon {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -41296,7 +41296,7 @@ tr.hide {
   position: fixed !important;
   width: 100vw !important;
 }
-._1m26oin:not(:last-of-type) {
+.site-content__content-wrapper-h2-wrapper:not(:last-of-type) {
   padding-bottom: 24px !important;
   border-bottom: 1px solid #ddd !important;
 }
@@ -41315,7 +41315,7 @@ tr.hide {
   color: #717171 !important;
   padding-top: 4px !important;
 }
-._1m26oin:not(:first-of-type) {
+.site-content__content-wrapper-h2-wrapper:not(:first-of-type) {
   padding-top: 32px !important;
 }
 ._1ez1349 {
@@ -41343,7 +41343,7 @@ tr.hide {
   padding-left: 8px !important;
   padding-right: 8px !important;
 }
-._1jn0ze9 {
+.auth-container__form-label {
   position: absolute !important;
   top: 18px !important;
   left: 12px !important;
@@ -41443,7 +41443,7 @@ tr.hide {
     'Helvetica Neue', sans-serif !important;
   font-weight: 400 !important;
 }
-._k8r05be {
+.auth-container__form-email-field-wrapper {
   position: relative !important;
   cursor: text !important;
   display: flex !important;
@@ -41461,7 +41461,7 @@ tr.hide {
   box-shadow: rgb(193 53 21) 0 0 0 1px inset !important;
   background-color: #fff8f6 !important;
 }
-._475dd78 {
+.auth-container__form-email-field-content {
   position: absolute !important;
   top: 18px !important;
   left: 12px !important;
@@ -41487,12 +41487,16 @@ tr.hide {
     flex-wrap: wrap !important;
   }
 }
-._ujw9ii {
+.py-12 {
   padding-top: 12px !important;
   padding-bottom: 12px !important;
+}
+
+.flex-50 {
   flex: 0 0 50% !important;
 }
-._1oj8hra {
+
+.form__check-input-icon {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   display: block !important;
@@ -41504,7 +41508,7 @@ tr.hide {
   margin-left: 3px !important;
   color: #fff !important;
 }
-._1v5cvwv4 {
+.form__check-input-icon-wrapper {
   display: inline-block !important;
   border-width: 1px !important;
   border-style: solid !important;
@@ -41858,7 +41862,7 @@ tr.hide {
   display: inline-block !important;
   white-space: normal !important;
 }
-._1kfl0pr {
+.inbox-container__message-btn-close {
   margin-left: 12px !important;
 }
 ._5qlqom {
@@ -41947,7 +41951,7 @@ tr.hide {
     width: calc((100vw - 260px) - 320px) !important;
   }
 }
-._gewmsg {
+.guest-container__text-header {
   margin-top: 0 !important;
   margin-bottom: 24px !important;
   color: #222 !important;
@@ -41980,7 +41984,7 @@ tr.hide {
   line-height: 1.375em !important;
   color: inherit !important;
 }
-._17j792vp {
+.main-content__header-ignore-note {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -42004,7 +42008,7 @@ tr.hide {
   line-height: 1.375em !important;
   color: #484848 !important;
 }
-._wlf6154 {
+.select-option__container {
   font-size: 16px !important;
   line-height: 24px !important;
   letter-spacing: normal !important;
@@ -42022,7 +42026,7 @@ tr.hide {
   width: 100% !important;
 }
 @supports (--custom: properties) {
-  ._wlf6154 {
+  .select-option__container {
     font-size: var(--font-form-element-font-size, 16px) !important;
     line-height: var(--font-form-element-line-height, 24px) !important;
     letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
@@ -42052,7 +42056,7 @@ tr.hide {
     margin-bottom: var(--spacing-form-element-margin-bottom, 8px) !important;
   }
 }
-._1w9nn735 {
+.select-option__container-select {
   appearance: none !important;
   font-size: 16px !important;
   line-height: 24px !important;
@@ -42073,7 +42077,7 @@ tr.hide {
   width: 100% !important;
 }
 @supports (--custom: properties) {
-  ._1w9nn735 {
+  .select-option__container-select {
     font-size: var(--font-form-element-font-size, 16px) !important;
     line-height: var(--font-form-element-line-height, 24px) !important;
     letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
@@ -42099,7 +42103,7 @@ tr.hide {
     padding-right: var(--spacing-select-arrow, 40px) !important;
   }
 }
-._1idvclr {
+.select-option__container-select-icon {
   position: absolute !important;
   top: 16px !important;
   right: 16px !important;
@@ -42107,7 +42111,7 @@ tr.hide {
   pointer-events: none !important;
 }
 @supports (--custom: properties) {
-  ._1idvclr {
+  .select-option__container-select-icon {
     top: var(--spacing-select-arrow-margin-top, 16px) !important;
     right: var(--spacing-select-arrow-margin-outside, 16px) !important;
   }
@@ -42122,28 +42126,28 @@ tr.hide {
   line-height: 1.44444em !important;
   color: #484848 !important;
 }
-._7qp4lh {
+.b-divider {
   border-bottom: 1px solid #ebebeb !important;
 }
 @supports (--custom: properties) {
-  ._7qp4lh {
+  .b-divider {
     border-bottom-width: var(--border-rule-border-width, 1px) !important;
     border-bottom-color: var(--color-divider, #ebebeb) !important;
   }
 }
-._d747d {
+.pb-24 {
   padding-bottom: 24px !important;
 }
-._1m26oin:first-of-type {
+.site-content__content-wrapper-h2-wrapper:first-of-type {
   padding-top: 8px !important;
 }
-._syd9hu {
+.site-content__content-wrapper-h2-text {
   font-weight: 600 !important;
   font-size: 18px !important;
   line-height: 22px !important;
   color: #222 !important;
 }
-._1te0xf7 {
+.site-content__content-wrapper-desc {
   padding-top: 4px !important;
   font-size: 14px !important;
   line-height: 18px !important;
@@ -42223,7 +42227,7 @@ tr.hide {
   line-height: inherit !important;
   appearance: none !important;
 }
-._1poxnz2 {
+.guest-container__selector-icon-wrapper {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   position: absolute !important;
@@ -42239,10 +42243,10 @@ tr.hide {
   color: #222 !important;
   padding-top: 24px !important;
 }
-.dir.c14z17by[class][class] {
+.dir.guest-container__form-wrapper[class][class] {
   background-color: var(--f-mkcy-f);
 }
-.c14z17by[class][class] {
+.guest-container__form-wrapper[class][class] {
   color: var(--f-k-smk-x);
 }
 ._1o7kvyb {
@@ -42442,7 +42446,7 @@ tr.hide {
   flex-wrap: wrap !important;
   gap: 12px 8px !important;
 }
-._1h0bjrrv {
+.getting_set_up_improvement_btn {
   cursor: pointer !important;
   text-align: center !important;
   border: 1px solid #222 !important;
@@ -48504,7 +48508,7 @@ video::cue {
   margin-top: 8px !important;
   margin-bottom: 16px !important;
 }
-._1jj61m9 {
+.auth-container__form-email-wrapper {
   position: relative !important;
   cursor: text !important;
   display: flex !important;
@@ -49075,7 +49079,7 @@ label {
   display: inline-block !important;
   position: relative !important;
 }
-._11hx67x {
+.auth-container__form-label-text {
   max-width: 100% !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
@@ -49086,7 +49090,7 @@ label {
   top: 2px !important;
   position: relative !important;
 }
-._fywymp7 {
+.auth-container__form-email-field-input {
   display: flex !important;
   opacity: 1 !important;
 }
@@ -49154,7 +49158,7 @@ label {
     -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
     transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
 }
-._js9i23 {
+.auth-container__form-field-wrapper {
   display: flex !important;
   opacity: 0 !important;
 }
@@ -49309,7 +49313,7 @@ label {
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
-._14i3z6h {
+.auth-container__forgot-text {
   color: inherit !important;
   font-size: 1em !important;
   font-weight: inherit !important;
@@ -49317,7 +49321,7 @@ label {
   margin: 0 !important;
   padding: 0 !important;
 }
-._14i3z6h:focus {
+.auth-container__forgot-text:focus {
   outline: 0 !important;
 }
 ._qzcds1 {
@@ -50017,7 +50021,7 @@ label {
   text-align: inherit !important;
   outline: 0 !important;
 }
-._13a5kt53 {
+.auth-container__panel-forgot-pane {
   margin-bottom: 16px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif !important;
@@ -50026,7 +50030,7 @@ label {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._1lftqm5 {
+.auth-container__reset-btn {
   height: 116px !important;
   margin-top: 24px !important;
   margin-bottom: 16px !important;
